test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-09-29 16:14:57.124261

